changed code for city

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Page</title>
+    <!-- Link to the CSS file in the static folder -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="content">
-        <h1 style="text-align: center">Search</h1>
+        <h1>Weather Search</h1>
 
-        <div class="form">
+        <div class="form-container">
             <form action="/weatherapp" method="POST">
-                <label for="city">Enter City:</label>
-                <input type="text" name="city" id="city"><br><br>
+                <div class="form-group">
+                    <label for="city">Enter City:</label>
+                    <input type="text" name="city" id="city" placeholder="City Name">
+                </div>
 
-                <label for="units">Enter Units:</label>
-                <input type="text" name="units" id="units"><br><br>
+                <div class="form-group">
+                    <label for="units">Enter Units (metric/imperial):</label>
+                    <input type="text" name="units" id="units" placeholder="e.g. metric">
+                </div>
 
-                <label for="appid">Enter your API Key:</label>
-                <input type="text" name="appid" id="appid"><br><br>
+                <div class="form-group">
+                    <label for="appid">Enter your API Key:</label>
+                    <input type="text" name="appid" id="appid" placeholder="API Key">
+                </div>
 
-                <input type="submit" value="Search">
+                <div class="form-group">
+                    <input type="submit" value="Search">
+                </div>
             </form>
         </div>
     </div>
